--- a/src/elements/map-block.html
+++ b/src/elements/map-block.html
@@ -2,7 +2,7 @@
 
 <link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
-
+<link rel="import" href="../../bower_components/iron-icons/maps-icons.html">
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../../bower_components/paper-item/paper-icon-item.html">
 <link rel="import" href="../../bower_components/paper-item/paper-item-body.html">
@@ -159,7 +159,13 @@
                  target="_blank"
                  rel="noopener noreferrer"
               >
-                <paper-icon-button icon="icons:directions"></paper-icon-button>
+                <paper-icon-button icon="icons:directions"></paper-icon-button> NAVIGATION
+              </a>
+              <a target="_blank"
+                 rel="noopener noreferrer"
+                 class="bottom-link"
+                 href="https://www.google.com/maps/dir/Gladbacher+Stra%C3%9Fe+67,+40219+D%C3%BCsseldorf,+Deutschland/Plockstra%C3%9Fe+14,+40219,+D%C3%BCsseldorf,+Deutschland/@51.2106769,6.7554848,16z/data=!4m14!4m13!1m5!1m1!1s0x47b8ca73a121e3e5:0x19fa746f598fcf7c!2m2!1d6.7557621!2d51.2123736!1m5!1m1!1s0x47b8ca73bfeeb479:0xce00bd82f4c954b8!2m2!1d6.75527!2d51.21133!3e0">
+               <paper-icon-button icon="icons:maps:local-parking"></paper-icon-button> MORE PARKING
               </a>
             </div>
           </div>
