--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <meta property="og:description"
         content="The biggest Google tech conference in NRW Germany carefully crafted for you by GDG community! All about Android, Web and Cloud from the world experts">
   <meta property="og:type" content="Event">
-  <meta property="og:image" content="https://duesseldorf.devfest.de/images/social-share.png">
+  <meta property="og:image" content="https://duesseldorf.devfest.de/images/social-share.jpg">
 
   <!-- Twitter meta data -->
   <meta name="twitter:card" content="summary_large_image">
@@ -66,7 +66,7 @@
   <meta name="twitter:title" content="GDG Düsseldorf DevFest 2016">
   <meta name="twitter:description"
         content="The biggest Google tech conference in NRW Germany carefully crafted for you by GDG community! All about Android, Web and Cloud from the world experts">
-  <meta name="twitter:image" content="https://duesseldorf.devfest.de/images/social-share.png">
+  <meta name="twitter:image" content="https://duesseldorf.devfest.de/images/social-share.jpg">
   
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
   <link rel="dns-prefetch" href="https://apis.google.com">
