update hoverboard to 1.0.4

--- a/src/elements/featured-people.html
+++ b/src/elements/featured-people.html
@@ -51,10 +51,11 @@
       }
 
       .company {
+        margin-top: 4px;
         padding: 0 16px;
         display: block;
         font-size: .7em;
-        line-height: 1.8;
+        line-height: 1;
       }
 
       .block-link {
