--- a/src/styles/dialog-styles.html
+++ b/src/styles/dialog-styles.html
@@ -31,7 +31,7 @@
         };
         --paper-menu-button: {
           margin-top: calc(-36px - var(--content-padding));
-          margin-right: var(--content-padding);
+          margin-right: -8px;
           float: right;
           z-index: 1;
         };
