--- a/src/elements/footer-block.html
+++ b/src/elements/footer-block.html
@@ -6,12 +6,15 @@
 
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../bower_components/paper-menu-button/paper-menu-button.html">
+<link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../../bower_components/paper-item/paper-icon-item.html">
 <link rel="import" href="../../bower_components/paper-menu/paper-menu.html">
 <link rel="import" href="../../bower_components/paper-item/paper-item.html">
 
 <link rel="import" href="../styles/shared-styles.html">
 <link rel="import" href="../js-wrappers/g-plusone.html">
 <link rel="import" href="../behaviors/localize-behavior.html">
+<link rel="import" href="../behaviors/share-behavior.html">
 <link rel="import" href="mailchimp-subscribe.html">
 
 
@@ -30,6 +33,7 @@
           padding: 0;
         };
         --paper-menu-background-color: #fff;
+        --paper-menu-button-dropdown-background: #fff;
       }
 
       .container {
@@ -116,7 +120,8 @@
         margin-right: 4px;
       }
 
-      paper-item {
+      paper-item,
+      paper-icon-item {
         cursor: pointer;
       }
 
@@ -236,18 +241,16 @@
         is: 'footer-block',
 
         behaviors: [
-          HOVERBOARD.LocalizeBehavior
-        ],
-
-        observers: [
-          'languageChanged(app.lang)'
+          HOVERBOARD.LocalizeBehavior,
+          HOVERBOARD.ShareBehavior
         ],
 
         scrollToTop: function (e) {
           HOVERBOARD.Elements.Template.backToTop(e);
         },
-        languageChanged: function (lang) {
-          HOVERBOARD.Analytics.trackEvent('language', 'select', lang);
+
+        _changeLanguage: function (e) {
+          HOVERBOARD.Analytics.trackEvent('language', 'select', e.target.label);
         },
         _getLinkTarget: function (newTab) {
           return newTab ? '_blank' : '';
