--- a/src/elements/toast-element.html
+++ b/src/elements/toast-element.html
@@ -20,6 +20,14 @@
         font-weight: 600;
         cursor: pointer;
         white-space: nowrap;
+        user-select: none;
+      }
+
+      paper-toast[fit-bottom] {
+        width: 100%;
+        min-width: 0;
+        border-radius: 0;
+        margin: 0;
       }
     </style>
 
@@ -29,6 +37,7 @@
       duration="[[duration]]"
       text="[[text]]"
       on-tap="_handleTap" layout horizontal justified
+      fit-bottom$="{{app.isPhoneSize}}"
     >
 
       <span class="toast-action"
@@ -51,6 +60,10 @@
         ],
 
         properties: {
+
+          app: {
+            type: Object
+          },
 
           action: {
             type: String,
