--- a/src/pages/blog-page.html
+++ b/src/pages/blog-page.html
@@ -5,6 +5,7 @@
 <link rel="import" href="../../bower_components/neon-animation/neon-animated-pages.html">
 
 <link rel="import" href="../behaviors/page-behavior.html">
+<link rel="import" href="../behaviors/share-behavior.html">
 <link rel="import" href="blog-list.html">
 <link rel="import" href="post-page.html">
 
