--- a/src/pages/speakers-page.html
+++ b/src/pages/speakers-page.html
@@ -17,6 +17,7 @@
 <link rel="import" href="../elements/footer-block.html">
 <link rel="import" href="../behaviors/utils-behavior.html">
 <link rel="import" href="../behaviors/page-behavior.html">
+<link rel="import" href="../behaviors/localize-behavior.html">
 
 <dom-module id="speakers-page">
 
@@ -198,9 +199,9 @@
             </a>
             <a href$="/speakers/[[speaker.id]]/" class="card-content">
               <iron-image class="company-logo" src="{{speaker.companyLogo}}" sizing="contain"></iron-image>
-              <div class="tags">Skills:
+              <div class="tags">{{localize('skills')}}:
                 <template is="dom-repeat" items="[[speaker.tags]]" as="tag">
-                  <span class="tag" style$="{{_getCustomStyleValue(tag)}}" target="_blank" rel="noopener noreferrer">[[tag]]</span>
+                  <span class="tag" style$="{{_getCustomStyleValue(tag)}}">[[tag]]</span>
                 </template>
               </div>
               <marked-element class="details-text" markdown="[[speaker.shortBio]]">
@@ -242,7 +243,9 @@
         behaviors: [
           Polymer.NeonSharedElementAnimatableBehavior,
           HOVERBOARD.PageBehavior,
-          HOVERBOARD.UtilsBehavior
+          HOVERBOARD.UtilsBehavior,
+          HOVERBOARD.LocalizeBehavior
+
         ],
 
         properties: {
@@ -341,3 +344,4 @@
   </script>
 
 </dom-module>
+
