--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description"
         content="The biggest Google tech conference in NRW Germany carefully crafted for you by GDG community! All about Android, Web and Cloud from the world experts">
   <meta name="keywords"
-        content="event, gdg, gde, devfest, google, programming, android, chrome, polymer, developers, web, cloud, androiddev, sipgate">
+        content="event, gdg, gde, devfest, google, programming, android, chrome, polymer, developers, web, cloud, androiddev, sipgate, devfestseason16">
   <meta name="author" content="GDG Düsseldorf">
 
   <title>GDG Düsseldorf DevFest 2016</title>
@@ -147,12 +147,9 @@
       }
     }
   </script>
-
 </head>
 <body>
-
 <hoverboard-app id="happ"></hoverboard-app>
-
 <script src="scripts/helper/util.js"></script>
 <script src="scripts/helper/elements.js"></script>
 <script src="scripts/bootstrap.js"></script>
