--- a/src/elements/about-block.html
+++ b/src/elements/about-block.html
@@ -4,8 +4,6 @@
 
 <link rel="import" href="../../bower_components/marked-element/marked-element.html">
 
-<link rel="import" href="../behaviors/localize-behavior.html">
-
 
 <dom-module id="about-block">
 
@@ -55,16 +53,16 @@
 
     <div class="container">
       <div class="about-item">
-        <h4 class="heading">[[localize('organizer')]]</h4>
-        <marked-element markdown="[[localize('about-organizers')]]">
+        <h4 class="heading">{$ organizerTitle $}</h4>
+        <marked-element markdown="{$ aboutOrganizers $}">
           <div class="markdown-html"></div>
         </marked-element>
-        <a class="page-link" href="/team">[[localize('open-team-page')]]</a>
+        <a class="page-link" href="/team">{$ openTeamPage $}</a>
       </div>
       <span class="divider"></span>
       <div class="about-item">
-        <h4 class="heading">[[localize('what-is-gdg')]]</h4>
-        <marked-element markdown="[[localize('about-gdg')]]">
+        <h4 class="heading">{$ whatIsGdg $}</h4>
+        <marked-element markdown="{$ aboutGdg $}">
           <div class="markdown-html"></div>
         </marked-element>
       </div>
@@ -78,11 +76,7 @@
 
       Polymer({
 
-        is: 'about-block',
-
-        behaviors: [
-          HOVERBOARD.LocalizeBehavior
-        ]
+        is: 'about-block'
 
       });
 
