--- a/src/elements/call-to-action.html
+++ b/src/elements/call-to-action.html
@@ -3,7 +3,6 @@
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
 
 <link rel="import" href="../styles/shared-styles.html">
-<link rel="import" href="../behaviors/localize-behavior.html">
 
 
 <dom-module id="call-to-action">
@@ -46,8 +45,8 @@
     </style>
 
     <div class="container container-narrow">
-      <h4 class="heading">[[localize(app.data.callToAction.videoTitle)]]</h4>
-      <paper-button class="open-dialog-button" on-tap="playVideo">[[localize('action')]]</paper-button>
+      <h4 class="heading">{$ callToAction.videoTitle $}</h4>
+      <paper-button class="open-dialog-button" on-tap="playVideo">{$ action $}</paper-button>
     </div>
 
   </template>
@@ -60,13 +59,9 @@
 
         is: 'call-to-action',
 
-        behaviors: [
-          HOVERBOARD.LocalizeBehavior
-        ],
-
         playVideo: function () {
-          HOVERBOARD.Elements.Template.openVideo(this.localize(this.app.data.callToAction.videoTitle),
-            this.app.data.callToAction.videoId, true);
+          HOVERBOARD.Elements.Template.openVideo('{$ callToAction.videoTitle $}',
+            '{$ callToAction.videoId $}', true);
         }
 
       });
