--- a/src/elements/logos-block.html
+++ b/src/elements/logos-block.html
@@ -5,7 +5,6 @@
 
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
 
-<link rel="import" href="../behaviors/localize-behavior.html">
 <link rel="import" href="../styles/shared-styles.html">
 
 <dom-module id="logos-block">
@@ -66,10 +65,10 @@
     </style>
 
     <div class="container">
-      <h4 class="heading text-center">[[localize('partners')]]</h4>
+      <h4 class="heading text-center">{$ partners $}</h4>
       <template is="dom-repeat" items="[[app.partners]]" as="block">
         <div class="logos-block-wrapper">
-          <h5 class="logos-block-title text-center">[[localize(block.title)]]</h5>
+          <h5 class="logos-block-title text-center">[[block.title]]</h5>
           <div class="logos">
             <template is="dom-repeat" items="[[block.logos]]" as="logo">
               <a class="logo-item" href="[[logo.url]]" title="[[logo.name]]" target="_blank" rel="noopener noreferrer">
@@ -97,10 +96,6 @@
       Polymer({
 
         is: 'logos-block',
-
-        behaviors: [
-          HOVERBOARD.LocalizeBehavior
-        ],
 
         _trackClick: function () {
           HOVERBOARD.Analytics.trackEvent('sponsors', 'open proposition', 'Become a partner');
